fix margins and alignments

--- a/src/components/BigButton/BigButton.scss
+++ b/src/components/BigButton/BigButton.scss
@@ -1,7 +1,7 @@
 @import "../../utilities/colorPalette.scss";
 
 .big-button {
-	width: 270px;
+	width: 100%;
 	padding: 8px;
 
 	font-size: 15px;
