--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -6,9 +6,8 @@
 		border-style: solid;
 		border-color: gray;
 		margin: 15px;
-		width: 233px;
+		width: 100%;
 		padding: 8px 8px 8px 30px;
-
 		font-size: 15px;
 	}
 
